--- a/src/app/admin/product-form/product-form.component.html
+++ b/src/app/admin/product-form/product-form.component.html
@@ -32,23 +32,26 @@
           </div>
 
           <label for="price">Price</label>
-
           <div class="input-group mb-3">
             <div class="input-group-prepend">
               <span class="input-group-text">$</span>
             </div>
-            <input [(ngModel)]="product.price" type="number" name="price" #price="ngModel"
-                   id="price" class="form-control" required [min]="0">
+            <input
+              [(ngModel)]="product.price"
+              type="number"
+              name="price"
+              #price="ngModel"
+              id="price"
+              class="form-control"
+              required [min]="0">
             <div class="input-group-append">
               <span class="input-group-text">.00</span>
             </div>
           </div>
-
           <div class="alert alert-danger" *ngIf="price.touched && price.invalid">
             <div *ngIf="price.errors.required">Price is required.</div>
             <div *ngIf="price.errors.min">Price should be 0 or higher.</div>
           </div>
-
         </div>
 
 
